<resources>
    <string name="app_name">bitKARD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="title_activity_about">About</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_name_capital_letters">bit</string>
    <string name="app_name_capital_letters_2">KARD</string>
    <string name="client_name">Asociación de Comunicadores</string>
    <string name="client_name_capital_letters">ASOCIACIÓN DE COMUNICADORES</string>
    <string name="client_mision_vision">bitKARD es una novedosa herramienta que facilita la promoción de profesionales, entidades y sus servicios.
Fácil de usar y distribuir, inagotable e interactiva; bitKARD estará siempre al alcance del contacto que necesita.
        </string>
    <string name="developer_email">rlavila1387@gmail.com</string>
    <string name="client_briefing1">Organización que agrupa a directivos, técnicos, especialistas y docentes que se desempeñan en profesiones relacionadas a la creación de piezas con fines comunicacionales en cualquier soporte y a la investigación en comunicación.</string>
    <string name="client_briefing2">Fundada el 25 de Junio 1991 se integra en círculos profesionales especializados de Comunicadores Institucionales, Mercadotecnia, Relaciones Públicas, Creativos e Investigadores.</string>
    <string name="client_briefing3">Mediante a la representación de sus asociados presta servicios de capacitación y conceptualización de herramientas, ambas para la gestión de comunicación.</string>
    <string name="cliente_email">holguin@accs.co.cu</string>
    <string name="cliente_web">https://www.accs.co.cu</string>
    <string name="cliente_social">https://www.facebook.com/comunicadorescubanos</string>
    <string name="cliente_phone1">24471206</string>
    <string name="cliente_phone2">24427906</string>
    <string name="home">Home</string>
    <string name="briefing">Briefing</string>
    <string name="contacts">Contacts</string>
    <string name="services">Services</string>
    <string name="localization">Localization</string>
    <string name="gallery">Gallery</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faq">FAQ</string>
    <string name="faq_question1">¿Cómo matricular en un curso para personas naturales?</string>
    <string name="faq_question1_answer">Usted debe personarse en nuestra sede portando su Carné de Identidad y una fotocopia de su título de nivel educacional vencido. (Bachiller, Técnico Medio o Universitario)</string>
    <string name="faq_question2">¿Qué duración y precio tienen los cursos para personas naturales?</string>
    <string name="faq_question2_answer">Todos los cursos tienen una duración de 20 hrs clase (5 encuentros en la semana de 4 hrs) por una comisión de 50 CUP.</string>
    <string name="faq_question3">¿Cómo solicitar cursos para personas jurídicas?</string>
    <string name="faq_question3_answer">El representante o quien atienda Capacitación de la entidad interesada presentará en nuestra sede el Modelo de Solicitud, que al ser llenado se acompañará con el Certifico Legal de la institución para proceder a la conformación del contrato.</string>
    <string name="faq_question4">¿Qué beneficios obtengo como persona jurídica al solicitar un curso?</string>
    <string name="faq_question4_answer1">-	El tema del curso que desee recibir. </string>
    <string name="faq_question4_answer2">-	La cantidad de cursistas en cada curso. </string>
    <string name="faq_question4_answer3">-	El lugar de impartición del curso. </string>
    <string name="faq_question4_answer4">-	La duración del curso.  </string>
    <string name="faq_question5">¿Qué duración y precio tienen los cursos para personas jurídicas?</string>
    <string name="faq_question5_answer">El cliente determina la duración de los cursos que recibirá, en tanto la facturación se calculará por un concepto de 1000.00 CUP por cada 20 hrs clase. Ej: Un curso de Gestión de la Publicidad de 40 hrs clase tendrá un importe de 2000.00 CUP y la cantidad de cursistas que el cliente determine, siempre que las condiciones del local electo lo permitan.</string>
    <string name="title_activity_qr_code_scanner">QrCodeScannerActivity</string>

    <string name="services_1">Courses</string>
    <string name="services_1_descripcion">Put description</string>
    <string name="services_2">Asesoría para la concepción e implementación de acciones de comunicación</string>
    <string name="services_2_descripcion">Put description</string>
    <string name="services_3">Conceptualización de Planes y Manuales de Comunicación</string>
    <string name="services_3_descripcion">Put description</string>
    <string name="services_4">Diseño de Manuales de Identidad Visual</string>
    <string name="services_4_descripcion">Put description</string>
    <string name="services_5">Desarrollo de spots audiovisuales y radiales</string>
    <string name="services_5_descripcion">Put description</string>
    <string name="share">Share</string>
    <string name="Send">Send</string>
    <string name="Communicate">Communicate</string>
    <string name="cliente_email_header">Email</string>
    <string name="cliente_phone_header">Phone(s)</string>
    <string name="cliente_social_header">Social</string>
    <string name="cliente_web_header">Web</string>
    <string name="action_acept">Call</string>
    <string name="action_decline">Decline</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="scan_message">Aim the camera at a QR code containing contact data.</string>
    <string name="title_activity_qr_code">QrCode</string>
    <string name="directory">Directory</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="detail_activity">Detail</string>
    <string name="name1">Pepe</string>
    <string name="name2">Lolo</string>


</resources>
