<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cu.xkoders.presentationcard.fragments.Briefing">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/briefing1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_briefing1"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="@string/font_family_light"
        android:textSize="19sp"
        android:layout_marginTop="41dp"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_briefing2"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="@string/font_family_light"
        android:textSize="19sp"
        android:id="@+id/birefing2"
        android:layout_gravity="center_horizontal|top"
        android:layout_below="@+id/briefing1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_briefing3"
        android:id="@+id/briefing3"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="19sp"
        android:fontFamily="@string/font_family_light"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/birefing2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_logo_asociacion"
        android:layout_below="@+id/briefing3" />

</RelativeLayout>
