<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cu.xkoders.presentationcard.fragments.Home">

    <TextView
        android:id="@+id/text_name_app_capital_letters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="94dp"
        android:text="@string/app_name_capital_letters"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_bit"
        android:textSize="75sp" />

    <TextView
        android:id="@+id/text_cliente_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/font_family_light"
        android:text="@string/client_name_capital_letters"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_cliente_name"
        android:layout_marginTop="41dp"
        android:clickable="false"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="@string/font_family_light"
        android:text="@string/client_mision_vision"
        android:textSize="17sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignTop="@+id/text_name_app_capital_letters"
        android:layout_toEndOf="@+id/text_name_app_capital_letters"
        android:layout_toRightOf="@+id/text_name_app_capital_letters"
        android:text="@string/app_name_capital_letters_2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color_kard"
        android:textSize="75sp" />

    <include layout="@layout/fab_layout"
        android:id="@+id/include" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_more_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more_option"
        app:backgroundTint="@color/color_kard"
        android:paddingBottom="5px"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/include"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp" />




</RelativeLayout>
